# Food-Ordering

./: CMakeLists.txt  README.md  choice.c  choice.h  crypt.c  crypt.h  dataProcessing.c  dataProcessing.h  drink.c  drink.h  foodType.c  foodType.h  main.c  menu.c  menu.h  order.c  order.h  password.c  password.h  specFood.c  specFood.h  user.c  user.h  usersData.c  usersData.h
